--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile files('libs/Simple-Rss2-Android.jar')
     compile files('libs/simple-xml-2.7.1.jar')
+    compile 'com.github.ahorn:android-rss:master'
 }
